# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.cursor/rules/: build-system.mdc  cpp-standards.mdc  documentation.mdc  project-structure.mdc  testing.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  pre-init.sh
cmake/: ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
mylib/: CMakeLists.txt
mylib/include/mylib/: Calculator.hpp
mylib/src/: Calculator.cpp
src/: main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
